influx/k8s/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influx
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influx
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/environment: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - db.server.home
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /influx
      backendRefs:
        - name: influxdb
          namespace: monitoring
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: influx-stripprefix
